<resources>

    <!-- Strings for Home Activity -->
    <string name="app_name">Browse Topics</string>
    <string name="action_settings">Settings</string>
    <string name="browsePublicTopicsButton">Browse Public \nTopics</string>
    <string name="browsePrivateTopicsButton">Browse Private Topics</string>

    <!-- Strings for the Public Topics activity -->
    <string name="title_activity_public_topics">Public Topics Activity</string>

    <!-- Strings for the Private Topics activity -->
    <string name="title_activity_private_topics">Private Topics Activity</string>
    <string name="title_activity_public_messages_list">Public Messages List</string>
    <string name="topicOptionsButton">Options</string>
    <string name="newTopicButton">New Topic</string>

    <string name="title_activity_private_messages_list">Private Messages List</string>
    <string name="title_activity_post_message">Post Message</string>
    <string name="photoDescription">Photo to be posted with the topic</string>

    <!--  Strings for Post Message activity -->
    <string name="postTitle">"Message Title:"</string>
    <string name="promptText">Comments:</string>
    <string name="defaultTopicInput">Enter here</string>
    <string name="cameraButtonText">Take Photo</string>
    <string name="postMessageButton">Post Message</string>
    <string name="publicButton">Public Message</string>
    <string name="privateButton">Private Message</string>

    <!-- Strings for Messages List activity -->
    <string name="newMessageButton">New Message</string>

    <!-- Strings for Toasts -->
    <string name="choosePublicOrPrivate">Error: Select Public or Private message.</string>
    <string name="cameraFailure">Camera failure. Try again.</string>
    <string name="postFailure">No internet connection. Try again</string>
    <string name="title_activity_view_message">View Message</string>

    <string name="hello_world">Hello world!</string>
</resources>
